--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "image-generator-bot",
+  "name": "emotion-checker-bot",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "type": "module",
   "dependencies": {
-    "axios": "^1.6.7",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "node-fetch": "^2.6.7"
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
